package com.designpatterns.graph.pattern.struct.bridge;

/**
 * @author: jiangjiabin
 * @date: Create in 23:17 2021/11/3
 * @description:
 */
public interface Brand {

    void call(String msg);
}
